client/css/cents.css
body {
  overflow-y: hidden;
}

#login {
  width: 100%;
  text-align: center;
  margin-top: 30%;
  display: none;
}

.flickity-enabled.is-draggable .flickity-viewport {
    cursor: all-scroll !important;
}

.hidden {
  display: none;
}

.column.menu {
  margin-top: 13px;
  text-align: center;
  line-height: 25px;
  padding-top: 8px;
}
.column:not(.menu) {
  height: 100%;
}

div.menu a {
  width: 25%;
  padding-top: 10px;
  line-height: 20px;
  color: rgba(0, 0, 0, 0.49) !important;
  background-color: rgba(255, 255, 255, 0.36) !important;
  font-weight: bolder;
  border-color: rgba(255, 255, 255, 0) !important;
}

div.menu a:first-child {
  float: left;
}
div.menu a:last-child {
  float: right;
}

a.button {
  width: 100%;
  height: auto;
}
table {
  margin-bottom: 0px;
  line-height: auto;
  border-collapse: collapse;
}
td {
  border-bottom: none;
  padding: 0px;
}
td.title {
    font-weight: 600;
    padding-left: 5px;
}
td.total, td.status, td.date {
    text-align: right;
}

td.status, td.date {
    text-align: right;
    width: 42%;
    padding-right: 7px;
}

td.amount {
  padding-left: 7px;
}


tr.header td {
  line-height: 16px;
  padding-top: 12px;
  font-size: 15px;
  border-bottom: 1px solid;
  padding-bottom: 5px;
  border-color: rgba(255, 255, 255, 0.05);
}

tr.info td {
  padding-top: 6px;
  line-height: 10px;
  padding-bottom: 6px;
  border-color: rgba(0, 0, 0, 0.09);
  font-size: 14px;
  font-family: sans-serif;
  background-color: rgba(0, 0, 0, 0.03);
}

/*
i {
  position: relative;
  right: 0px;
}
*/

a.button {
  user-select: none;
  padding: 0px 13px;
  font-weight: 500;
  letter-spacing: .1rem;
  padding-bottom: 8px;
}

a.button.paid, button.selected.paid {
  color: rgb(255, 255, 255);
  border-color: rgb(255, 255, 255);
  background-color: rgb(173, 168, 137);
}

a.button.due, button.selected.due {
  color: rgba(255, 255, 255, 1);
  background-color: rgba(255, 0, 0, 1);
  border-color: rgba(255, 255, 255, 1);
}

a.button.pending, button.selected.pending {
  color: rgba(255, 255, 255, 1);
  background-color: rgba(220, 170, 62, 1);
  border-color: rgba(255, 255, 255, 1);
}

a.button.totals:not(.menu) {
  background-color: rgba(0, 0, 0, 0.09);
  border-color: rgba(0, 0, 0, 0);
  color: rgb(230, 226, 202);
}

a.button.totals td{
  text-transform: none;
}

a.button.totals table tr:last-child td{
  border-bottom: 0px;
}

a.totals .title.center {
  text-align: center;
  padding-bottom: 5px;
  border-bottom: 0px;
  text-transform: uppercase;
}

@media (min-width: 750px) {
  button.paid:hover {
    color: rgb(255, 255, 255);
    border-color: rgb(255, 255, 255);
    background-color: rgb(173, 168, 137);
  }

  button.due:hover{
    color: rgba(255, 255, 255, 1);
    background-color: rgba(255, 0, 0, 1);
    border-color: rgba(255, 255, 255, 1);
  }

  button.pending:hover {
    color: rgba(255, 255, 255, 1);
    background-color: rgba(220, 170, 62, 1);
    border-color: rgba(255, 255, 255, 1);
  }
}

a, button {
  -webkit-tap-highlight-color: rgba(0,0,0,0);
}
body {
  background-color: rgba(91,89,77,1);
  /*
  background-image: linear-gradient( rgba(0, 0, 0, 0.51), rgba(255, 255, 255, 0.09) ), url('http://mycolorscreen.com/wp-content/uploads/wallpapers_2012/320931/background-01.jpg');
  */
  background-repeat: no-repeat, no-repeat, repeat-x;
  background-position: top left, top right, top;
  background-size: 200% 100%;
}

a.button.menu.selected {
  background-color: #33C3F0 !important;
  color: white !important;
}

a.button.selected {
  color: #FFF;
  background-color: #1EAEDB;
  border-color: #1EAEDB;
}

#popup-modal {
  position: absolute;
  display: none;
/*  overflow: hidden;*/
  top: 100%;
  right: 23%;
  bottom: 100%;
  left: 23%;
  background: rgba(0,0,0,0.8);
  z-index: 99999;
  opacity:0.8;
  /*transition: bottom 0.4s ease-out, opacity 400ms ease-out;*/
}

/*
#popup-modal.show:after {
  content: '×';
  position: inherit;
  color: lightgrey;
  top: 0px;
  right: 40px;
  padding: 0 0px;
  font-weight: normal;
  font-size: 50px;
}
*/

#popup-modal.show {
  top: -200;
  right: 0;
  bottom: 0;
  left: 0;
  opacity:1;
  min-height: 110%;
  display: block;
  /*transition: bottom 0.3s ease-in, opacity 400ms ease-in;*/
}

#popup-modal .content {
  padding: 2em;
  opacity: 0;
  max-width: 410px;
}

#popup-modal:target {
  opacity:1;
  pointer-events: auto;
}

#popup-modal.show .content {
  opacity:1;
  background: white;
  margin-top: 5%;
/*  top: 5%;*/
/*  position: fixed;*/
/*
  left: 15%;
  right: 15%;
*/
  border-radius: 3px;
  /*min-height: 80%;*/
  /*transition: opacity 400ms ease-in;*/
}

#popup-modal button.graph{
  float: none;
  margin: 0px;
  margin-left: 1em;
  font-size: 21px;
  padding: 1px 5px 0px 6px;
  line-height: 37px;
  vertical-align: top;
  background: lightgray;
  color: white;
  border: 0px;
}

#popup-modal div.actions {
  text-align: center;
  margin-top: 20px;
}

#popup-modal div.actions button{
  float: none;
  min-width: 120px;
}

#popup-modal h2 a {
  text-decoration: none;
}

#popup-modal textarea.notes {
  width: 100%;
  font-family: monospace;
  font-size: 12px;
  overflow-y: hidden;
}

.container.content button {
  float: left;
  margin-right: 1em;
  padding-left: 2em;
  padding-right: 2em;
}

.lock-screen {
  height: 100%;
  overflow: hidden;
  width: 100%;
  /*position: fixed;*/
}

#main-carousel {
  position: absolute;
  bottom: 0px;
  top: 80px;
  left: 0px;
  right: 0px;
}
/* inherit height from parent */
.carousel { height: 100%; }

.carousel-cell {
  padding-top: 0px;
  height: 100%;
  width: 100%;
  overflow-x: hidden;
  overflow-y: overlay;
}

#main-carousel > .carousel-cell {
  opacity: 0;
}

@media (min-width: 550px) {
  .carousel-cell::-webkit-scrollbar {
    width: 0px;
  }
}

/*::-webkit-scrollbar {
  width: 12px;
}

::-webkit-scrollbar-thumb {
  background-color: red;
}

::-webkit-scrollbar-track {
  background-color: rgba(91,89,77,1);
}*/

